--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "dependencies": {
     "firebase": "^10.8.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.51.0",
+    "react-dom": "18.2.0",
+    "react-hook-form": "7.51.0",
     "react-router": "^6.22.3",
-    "react-router-dom": "^6.22.3",
+    "react-router-dom": "6.22.3",
     "react-scripts": "5.0.1"
   },
   "scripts": {
