--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "firebase": "^10.8.1",
-    "react": "^18.2.0",
+    "@reduxjs/toolkit": "2.2.2",
+    "firebase": "10.9.0",
+    "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "7.51.0",
-    "react-router": "^6.22.3",
+    "react-redux": "9.1.0",
+    "react-router": "6.22.3",
     "react-router-dom": "6.22.3",
     "react-scripts": "5.0.1"
   },
