--- a/package.json
+++ b/package.json
@@ -4,22 +4,16 @@
   "private": true,
   "dependencies": {
 
-    "@fortawesome/fontawesome-free": "^6.5.1",
+    "@fortawesome/fontawesome-free": "6.5.1",
     "emoji-picker-react": "^4.9.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router": "^6.22.3",
-    "react-router-dom": "^6.22.3",
-
-    "@reduxjs/toolkit": "2.2.2",
-    "firebase": "10.9.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-hook-form": "7.51.0",
-    "react-redux": "9.1.0",
     "react-router": "6.22.3",
     "react-router-dom": "6.22.3",
-
+    "@reduxjs/toolkit": "2.2.2",
+    "firebase": "10.9.0",
+    "react-hook-form": "7.51.0",
+    "react-redux": "9.1.0",
     "react-scripts": "5.0.1"
   },
   "scripts": {
